--- a/drpcUsingResources.html
+++ b/drpcUsingResources.html
@@ -39,9 +39,9 @@
                         <header class="major">
 							<section>
 								<h2>Using DRPC Resources</h2>
-                                <p3> One of the goals of the DRPC is to create resources that intsructors can use or adapt to, in order to talk about digital privacy in their classrooms. This section of the DRPC website provides infomration on how to cite DRPC resources that you use, and how to list them on your CV or resume. It also lists any adaptations and other course materials from instructors that used DRPC resources in their writing classrooms. Do you use DRPC resources in your classroom? Please reach out to us and tell us how via our Contact page! </p3>
+                                <p3> One of the goals of the DRPC is to create resources <br> that intsructors can use or adapt to, in order to talk about digital privacy <br>in their classrooms. This section of the DRPC website provides infomration on how to cite DRPC resources <br>that you use, and how to list them on your CV or resume. It also lists any <br>adaptations and other course materials from instructors that used DRPC resources in their <br>writing classrooms. Do you use DRPC resources in your classroom? Please reach out <br>to us and tell us how via our Contact page! </p3>
                                 <p></p>
-                                  <span><img src="images/digitalResources2.JPG" alt="logo" height=175/></span>
+                                  <span><img src="images/digitalResource.jpeg" alt="logo" height=175/></span>
 							</section>
 						</header>
 						<div class="row gtr-150">
